tests/baselines/reference/jsdocFunction_missingReturn.errors.txt
/a.js(1,24): error TS2847: A function with this return type needs to explicitly return a value.


==== /a.js (1 errors) ====
    /** @type {function(): number} */
                           ~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.
    function f() {}
    